# CFS

./: .gitignore  CMakeLists.txt  README.md  main.cpp
.github/workflows/: ci.yml
nlohmann/: PLACE_JSON_HPP_HERE.txt
resources/: process.json
src/: Metrics.cpp  Metrics.hpp  RoundRobin.cpp  RoundRobin.hpp  Scheduler.hpp  cfs.cpp  cfs.hpp  cpuBoundProcessExecution.cpp  cpuBoundProcessExecution.hpp  ioBoundProcessExecution.cpp  ioBoundProcessExecution.hpp  processService.cpp  processService.hpp
tests/: test_scheduler.cpp
